--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 use_frameworks!
 
 target 'ZYTool_Example' do
-  pod 'ZYTool', :path => '../'
+  pod 'ZSTool', :path => '../'
 
   target 'ZYTool_Tests' do
     inherit! :search_paths
